fixed welcome button gap

--- a/module.scss
+++ b/module.scss
@@ -128,7 +128,7 @@ body {
       display: flex;
       // justify-content: space-evenly;
       justify-content: start;
-      gap: 5.5rem;
+      gap: 2rem;
 
       button {
       font-size: 20px;
@@ -213,7 +213,7 @@ body {
       padding-bottom: 2rem;
 
       &__buttons {
-        gap: 3rem;
+        gap: 1.5rem;
       }
 
       h1 {
